# canvas-android

./: .gitattributes  .gitignore  .gitmodules  .graphqlconfig  PULL_REQUEST_TEMPLATE  README.md  android_duo.rb  codecov.yml  open_source.sh  private-data
.circleci/: config.yml  workflows.yml
.claude/: launch.json
.claude/skills/: build.md  deploy.md  pr.md  test.md
.github/workflows/: api-tests.yml  build-app.yml  claude-code-review.yml  create-tag.yml  deploy-parent.yml  deploy-student.yml  deploy-teacher.yml  import-translations.yml  open-source-build-parent.yml  open-source-build-student.yml  open-source-build-teacher.yml  pr-pipeline.yml  release-notes.yml  release-parent.yml  release-student.yml  release-teacher.yml  (+2 more)
InstrumentationTests/: build.gradle  settings.gradle
apps/: CLAUDE.md  SUBMISSION_FIX_PLAN.md  build.gradle  flutter_sdk_url  gradle  gradle.properties  postProcessTestRun.bash  settings.gradle
automation/: license_banner.rb
buildSrc/: build.gradle.kts
docs/: REBRANDING_GUIDE.md  SAAS_PAYMENTS_GUIDE.md  TECHNICAL_DOCS.md
foosball/: .gitignore  adb_foos.py  build.gradle  settings.gradle
gradle/: coverage.gradle  jacoco.gradle
libs/llm-llamacpp/src/main/cpp/: CMakeLists.txt  llm_bridge.cpp  logging.h
open_source_data/: debug.keystore  debug.properties  merge-private-data.gradle
refooz_2_lose/: .flutter-plugins-dependencies  .gitignore  README.md  pubspec.yaml
scripts/: generate-release-notes.js  generate_release_notes.js  get-code-coverage.js  update-jira-issues.js
training/: README.md
translations/: export.rb  flutter-extract.rb  flutter-generate-hooks.rb  import.rb  local-flutter-generate-hooks.rb  local-import.rb  projects.json
(+14341 files in other folders)
